Fixes Youtube iframe doesn't fit on mobile #1 by limiting the width of iframe to 95%

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -93,7 +93,9 @@ a img{
 
 iframe{
   display: block;
-  margin: 0 auto
+  margin: 0 auto;
+  max-width: 100vw;
+  width: 95%;
 }
 
 .wrapper{
